Fix: slide covering nav mobile

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -46,6 +46,7 @@
 
 .menu li{
     padding-left: 1rem;
+    cursor: pointer;
 }
 
 
@@ -145,7 +146,7 @@
         flex-direction: column;
         justify-content: center;
         position: fixed;
-        top: -100%;
+        top: -150%;
         left: 0;
         bottom: 0;
         right: 0;
